grammar.js
    source_file: $ => repeat(seq($._top_level, optional($._newline))),

    _top_level: $ => choice(
      $.use_decl,
      $.alias_decl,
      $.fn_decl,
      $.struct_decl,
      $.enum_decl,
      $.trait_decl,
      $.impl_decl,
      $.state_machine_decl,
      $.register_decl,
      // The embedded surface.  These five arrived with the hardware
      // work and never reached this grammar, so `bsp Nrf52840` parsed
      // as two identifiers and a board file was one long ERROR region.
      // bugs/tooling/closed/treesitter-grammar-behind-lexer.md
      $.peripheral_decl,
      $.memory_map_decl,
      $.vector_table_decl,
      $.bsp_decl,
      $.static_decl,
      $.error_kind_decl,
      $.req_decl,
      $.const_decl,
      $.frame_decl,
      $.prompt_decl,
      $.unsafe_discharge_stmt,
      // Bare `x: Type` and `Variant(...)` lines that appear inside
      // struct / enum bodies — kept as a top-level alternative for
      // robustness even though slice 5c+ nests them under their
      // parent decl via the external scanner.
      $.struct_field,
      $.let_stmt,
      $.return_stmt,
      $.break_stmt,
      $.continue_stmt,
      $.pass_stmt,
      $.if_stmt,
      $.elif_stmt,
      $.else_stmt,
      $.for_stmt,
      $.while_stmt,
      $.loop_stmt,
      $.match_stmt,
      // `system` and `asm` are statements, not declarations, but
      // `_top_level` is what a `block` repeats, so this is where a
      // fn-body construct is listed.
      $.system_stmt,
      $.asm_stmt,
      $.expr_stmt,
    ),

    // ── Comments ───────────────────────────────────────────────
    // Three spellings here: `//` line, `///` doc, `/* */` block.
    // `///` and `//` share a prefix, so doc_comment carries the
    // higher precedence to win the disambiguation.
    //
    hash_comment: $ => token(seq('#', /[^\n]*/)),
    module_path: $ => prec.right(seq(
      $.identifier,
      repeat(seq('.', $.identifier)),
      optional(seq('.', choice(
        field('group', $.import_group),
        field('glob', $.import_glob),
      ))),
    )),

    // `{core, cpu, loader}` — the brace-selection tail of a use path.
    fn_decl: $ => prec.right(seq(
      attrsAndPub($),
      // Modifiers: `async fn`, `const fn`, or both.
      optional(choice('async', 'const')),
      'fn',
      field('name', $.identifier),
      optional(field('type_params', $.type_params)),
      field('params', $.param_list),
      optional(field('return_type', seq('->', $._type_expr))),
      optional(field('effects', $.effect_list)),
      optional(field('body', $.block)),
    )),

    // INDENT-bracketed block — used by fn bodies, control-flow
    // bodies once those grow bodies, and any other indent-sensitive
    // construct.  Reuses the top-level alternative set so the body
    // can contain anything a script can.  Each item consumes an
    // optional trailing newline so expressions don't greedily
    // continue onto the next line via call_expr / index_expr
    // (`m()` followed by `[...]` on the next line was parsing as
    // `m()[...]` — a real-world list-literal-as-fn-body case).
    block: $ => seq(
      $._indent,
      repeat(seq($._top_level, optional($._newline))),
      $._dedent,
    ),

    param_list: $ => seq(
      '(',
      optional(sepBy1(',', choice($.self_param, $.param))),
      optional(','),
      ')',
    ),

    // `self`, `mut self`, or `var self` as the first param of an
    // impl method.  Bare — no type annotation.
    param: $ => seq(
      optional(choice('mut', 'var')),
      field('name', $.identifier),
      ':',
      field('type', $._type_expr),
      optional(seq('=', field('default', $._expr))),
    ),

    effect_list: $ => seq(
      '[',
      sepBy(',', $.identifier),
      ']',
    ),

    // ── struct / enum ──────────────────────────────────────────
    // Slice 5c — header + indent-fenced body.  The body is a
    // sequence of struct fields (`x: Float`) for structs and
    // expr_stmt-shaped variant calls (`Circle(radius: Float)`) for
    // enums, plus blank lines or comments via the existing extras
    // path.  `block` is reused — it just allows `_top_level`
    // entries which already covers both cases at this slice.
    register_decl: $ => prec.right(seq(
      'register',
      field('name', $.identifier),
      optional(seq('at', field('addr', $._expr))),
      optional(seq(':', field('type', $._type_expr))),
      optional(field('body', $.field_decl_block)),
    )),

    field_decl_block: $ => seq(
      $._indent,
      repeat($.field_decl),
      $._dedent,
    ),

    field_decl: $ => prec.right(seq(
      'field',
      field('name', $.identifier),
      ':',
      field('width', $.integer_literal),
      optional(seq('@', field('offset', $.integer_literal))),
    )),

    // ── the embedded surface ───────────────────────────────────
    // Five declarations and two statements that the reference lexer
    // reserves and this grammar did not know.  A missing keyword here
    // is not a parse ERROR — the word matches the identifier rule, so
    // `bsp Nrf52840` parsed as two identifiers and `has_error()` was
    // false, which is what made the drift invisible to the corpus
    // tests.  bugs/tooling/closed/treesitter-grammar-behind-lexer.md
    //
    // `peripheral UART0 at 0x40002000` — a register group.  The body
    // is register decls, which already have a rule.
    peripheral_decl: $ => prec.right(seq(
      'peripheral',
      field('name', $.identifier),
      optional(seq('at', field('addr', $._expr))),
      optional(field('body', $.block)),
    )),

    // `memory_map nrf52840` — regions and section placements for the
    // linker.  The member keywords (`region`, `section`, `at`, `size`,
    // `in`, `load_to`, `pad_to`, `entry_point`) are contextual IDENTs
    // in the reference parser, so they are spelled here rather than
    // reserved.
    memory_map_decl: $ => prec.right(seq(
      'memory_map',
      optional(field('name', $.identifier)),
      optional(field('body', $.memory_map_block)),
    )),

    memory_map_block: $ => seq(
      $._indent,
      repeat(choice(
        $.memory_region,
        $.memory_section,
        $.entry_point_line,
      )),
      $._dedent,
    ),

    // `region FLASH at 0x00000000 size 512K` — the size may carry a
    // K / M / G suffix, which lexes as an integer followed by an
    // identifier.
    memory_region: $ => prec.right(seq(
      'region',
      field('name', $.identifier),
      'at', field('base', $._expr),
      'size', field('size', $._expr),
      optional(field('unit', $.identifier)),
    )),

    // `section .text in FLASH`, `... load_to RAM`, `... pad_to 0x100`.
    memory_section: $ => prec.right(seq(
      'section',
      field('name', $.section_name),
      'in', field('region', $.identifier),
      optional(choice(
        seq('load_to', field('load_to', $.identifier)),
        seq('pad_to', field('pad_to', $._expr)),
      )),
    )),

    // `.text`, `.ARM.exidx` — a dotted name that does not start with
    // an identifier character, so it needs its own token.
    section_name: $ => token(seq('.', /[A-Za-z_][A-Za-z0-9_]*/,
                                 repeat(seq('.', /[A-Za-z_][A-Za-z0-9_]*/)))),

    entry_point_line: $ => prec.right(seq(
      'entry_point',
      field('symbol', $.identifier),
    )),

    // `vector_table cortex_m at 0x00000000` — ARM-defined slots, then
    // either `irqs from bsp.<chip>` or an inline `irqs a = 1, b = 2`.
    vector_table_decl: $ => prec.right(seq(
      'vector_table',
      field('arch', $.identifier),
      optional(seq('at', field('addr', $._expr))),
      optional(field('body', $.vector_table_block)),
    )),

    vector_table_block: $ => seq(
      $._indent,
      repeat(choice($.vector_slot, $.vector_irqs)),
      $._dedent,
    ),

    // `reset  Reset_Handler` — a slot name and the symbol it maps to.
    vector_slot: $ => prec.right(seq(
      field('slot', $.identifier),
      field('handler', $.identifier),
    )),

    vector_irqs: $ => prec.right(seq(
      'irqs',
      choice(
        seq('from', field('source', $.module_path)),
        sepBy1(',', seq(field('name', $.identifier), '=',
                        field('slot', $.integer_literal))),
      ),
    )),

    // `bsp Nrf52840` — the board, in one declaration: scalars, a
    // nested memory_map, nested peripherals and `irq N vector M`
    // lines.
    // The precedence is what tells `bsp Nrf52840` (a declaration)
    // from `bsp.board.init()` (the stdlib module head, `bsp_ns`
    // below): the two collide on `bsp` followed by an identifier, and
    // a declaration is what that is — the namespace form always has a
    // `.` next.
    bsp_decl: $ => prec.right(1, seq(
      'bsp',
      field('name', $.identifier),
      optional(field('body', $.bsp_block)),
    )),

    bsp_block: $ => seq(
      $._indent,
      repeat(choice(
        $.bsp_scalar,
        $.bsp_irq,
        $.memory_map_decl,
        $.peripheral_decl,
      )),
      $._dedent,
    ),

    // `arch "cortex_m4"`, `cpu_clock_hz 64000000` — the field names
    // are contextual IDENTs in the reference parser.
    bsp_scalar: $ => prec.right(seq(
      field('key', $.identifier),
      field('value', choice($.string_literal, $.integer_literal)),
    )),

    bsp_irq: $ => prec.right(seq(
      'irq',
      field('name', $.identifier),
      'vector',
      field('slot', $.integer_literal),
    )),

    // `static BUF : [u8; 4096]`, optionally `at 0x2000_0000` —
    // addressable storage in BSS or at a fixed address.  Only
    // `[u8; N]` is accepted by the reference parser; the grammar
    // takes any array type so a wrong width highlights as Novo and
    // is refused by the compiler rather than by the editor.
    static_decl: $ => prec.right(seq(
      attrsAndPub($),
      'static',
      field('name', $.identifier),
      ':',
      field('type', $._type_expr),
      optional(seq('at', field('addr', $._expr))),
    )),

    // `system` — the explicit-allocation block at @tier(embedded).
    system_stmt: $ => prec.right(seq(
      'system',
      optional(field('body', $.block)),
    )),

    // Inline asm, both spellings the reference parser takes:
    //   asm cortex_m { "nop" } clobbers "memory", "cc"
    //   asm cortex_m
    //       """bkpt #0xAB"""
    //       input  op = X @ "{r0}"
    // The operand keywords are contextual IDENTs, so the block form is
    // a run of lines rather than a spelled-out member list.
    asm_stmt: $ => prec.right(seq(
      'asm',
      field('arch', $.identifier),
      choice(
        seq('{', field('template', $.string_literal), '}',
            optional(seq('clobbers',
                         sepBy1(',', $.string_literal)))),
        optional(field('body', $.block)),
      ),
    )),

    let_stmt: $ => choice(
      seq(
        choice('let', 'var'),
        optional('mut'),
        field('name', $.identifier),
        optional(seq(':', field('type', $._type_expr))),
        '=',
        field('value', $._expr),
      ),
      seq(
        'let',
        field('name', $.tuple_binder),
        '=',
        field('value', $._expr),
      ),
    ),

    // `(a, _)` in `let` binding position.  `_` is a binder here
    // exactly as it is in `let _ = f()` and `fn on_tick(_: Int)`.
    expr_stmt: $ => choice(
      $.assignment_stmt,
      $._expr,
    ),

    // `name = expr` and `name op= expr` (compound assignment).
    // dynamic_prec keeps the parser from trying assignment_stmt
    // when the LHS is anything but a plain identifier or
    // field/index access.
    // `*p = v` stores through a raw pointer, and `deref_target` is
    // its target.  It reaches the parser because the external
    // scanner's continuation rule is gated on the previous line
    // having been one the parser would accept as finished — a
    // statement-initial `*` under a header that still owes a body is
    // a store, not the middle of a wrapped expression.  Reading
    // through a pointer (`1 + *p`) goes through unary_expr and is
    // unaffected.
    assignment_stmt: $ => prec.dynamic(1, seq(
      field('target', choice($.identifier, $.field_access, $.index_expr,
                             $.deref_target)),
      field('op', choice('=', '+=', '-=', '*=', '/=', '%=',
                         '|=', '&=', '^=', '<<=', '>>=', '>>>=')),
      field('value', $._expr),
    )),

    // The target of a raw-pointer store.  Its own rule rather than a
    // reuse of `unary_expr` so a highlight query can colour a store
    // target differently from a read, and so the `*` binds exactly one
    // postfix chain: `*p.next = v` stores through `p.next`.
    // The operand is a PLACE rather than an arbitrary expression:
    // `*p`, `*p.next`, `*xs[i]`, `**pp`.  Taking `$._expr` here makes
    // `'*' identifier '=>' identifier` ambiguous against a closure
    // body that is itself an assignment, and the wider rule buys
    // nothing — nothing else is storable.
    deref_target: $ => prec(11, seq(
      '*',
      choice($.identifier, $.field_access, $.index_expr, $.deref_target),
    )),

    // ── Control-flow statement headers (slice 5b) ────────────────
    // No indent tracking yet — the bodies that follow these
    // headers parse as separate top-level statements at this
    // slice's granularity.  This keeps highlighting honest about
    // what the keywords are without claiming structural nesting
    // we can't yet enforce.

    if_stmt: $ => prec.right(seq(
      'if',
      field('condition', $._expr),
      optional(field('body', $.block)),
    )),

    else_stmt: $ => prec.right(seq(
      'else',
      optional(field('body', $.block)),
    )),

    _pattern: $ => choice(
      $.or_pattern,
      $.as_pattern,
      $.wildcard_pattern,
      $.tuple_pattern,
      $.struct_pattern,
      $.list_pattern,
      $.cons_pattern,
      $.range_pattern,
      $.constructor_pattern,
      $.identifier_pattern,
      $.literal_pattern,
    ),

    // `1..5`, `1..=5`, and the hex spellings.  integer_literal
    // already covers hex, so one rule serves all four of the
    // reference's productions.
    identifier_pattern: $ => prec(-1, $.identifier),

    _type_expr: $ => choice(
      $.optional_type,
      $.list_type,
      $.fixed_array_type,
      $.fn_type,
      $.tuple_type,
      $.generic_type,
      $.modifier_type,
      $.pointer_type,
      $.paren_type,
      $.named_type,
    ),

    // `*T` / `*const T` — raw pointer types, used on the hardware
    // and FFI surfaces.
    pointer_type: $ => prec.right(seq(
      '*',
      optional('const'),
      $._type_expr,
    )),

    // `(T)` — parenthesised type.  Exists to separate a returned
    // function type from the enclosing declaration's effect row:
    // `-> (fn() -> Unit) [mutate]` returns a pure closure and is
    // itself `[mutate]`, where `-> fn() -> Unit [mutate]` binds the
    // row to the inner fn type.  Distinct from tuple_type, which
    // requires a comma.
    named_type: $ => prec.right(seq(
      $.identifier,
      optional(seq('.', $.identifier)),
    )),

    // `[u8; 6]` — fixed-size array type.  Distinguishes from
    // list_type via the `;` separator + size literal.
    fixed_array_type: $ => seq(
      '[',
      field('element', $._type_expr),
      ';',
      field('size', $.integer_literal),
      ']',
    ),

    // `fn(Int) -> Int` — function type.  Used in higher-order fn
    // params (`fn apply(f: fn(Int) -> Int, x: Int)`).
    // A function type carries its effect row the same way a fn
    // header does: `fn(Str) -> Unit [io]`.  The row is part of the
    // type, so two fn types differing only in effects are distinct.
    pipe_expr: $ => prec.left(12, seq($._expr, '|>', $._expr)),

    _call_arg: $ => choice(
      $.named_arg,
      $._expr,
    ),

    _fstring_open:  $ => '"',
