test/corpus/scanner_continuation.txt
================================================================
method chain continued on following lines
================================================================

fn build() -> Cli
    Cli.new("tool", "a small build tool")
        .cmd(CliCmd.new("build", "compile")
                .bool_flag("release", "r", "optimised build")
                .arg("target", "what to build"))
        .cmd(CliCmd.new("test", "run the test suite")
                .opt_arg("package", "restrict to one package"))

----

(source_file
  (fn_decl
    (identifier)
    (param_list)
    (named_type
      (identifier))
    (block
      (expr_stmt
        (call_expr
          (field_access
            (call_expr
              (field_access
                (call_expr
                  (field_access
                    (identifier)
                    (identifier))
                  (string_literal)
                  (string_literal))
                (identifier))
              (call_expr
                (field_access
                  (call_expr
                    (field_access
                      (call_expr
                        (field_access
                          (identifier)
                          (identifier))
                        (string_literal)
                        (string_literal))
                      (identifier))
                    (string_literal)
                    (string_literal)
                    (string_literal))
                  (identifier))
                (string_literal)
                (string_literal)))
            (identifier))
          (call_expr
            (field_access
              (call_expr
                (field_access
                  (identifier)
                  (identifier))
                (string_literal)
                (string_literal))
              (identifier))
            (string_literal)
            (string_literal)))))))

================================================================
arithmetic continued on following lines
================================================================

fn hdr(a: Str, b: Str) -> Str
    var s = "range(" + a
            + b + ")"
            + " window"
    s

----

(source_file
  (fn_decl
    (identifier)
    (param_list
      (param
        (identifier)
        (named_type
          (identifier)))
      (param
        (identifier)
        (named_type
          (identifier))))
    (named_type
      (identifier))
    (block
      (let_stmt
        (identifier)
        (binary_expr
          (binary_expr
            (binary_expr
              (binary_expr
                (string_literal)
                (identifier))
              (identifier))
            (string_literal))
          (string_literal)))
      (expr_stmt
        (identifier)))))

================================================================
a dot line does not swallow a real block body
================================================================

fn f(c: Bool, x: Rec) -> Int
    if c
        x.field
    else
        0

----

(source_file
  (fn_decl
    (identifier)
    (param_list
      (param
        (identifier)
        (named_type
          (identifier)))
      (param
        (identifier)
        (named_type
          (identifier))))
    (named_type
      (identifier))
    (block
      (if_stmt
        (identifier)
        (block
          (expr_stmt
            (field_access
              (identifier)
              (identifier)))))
      (else_stmt
        (block
          (expr_stmt
            (integer_literal)))))))

================================================================
a raw-pointer store opens a block, it does not continue a line
================================================================

fn store(p: *Int, c: Bool) [hw]
    if c
        *p = 1
        *p += 2

----

(source_file
  (fn_decl
    (identifier)
    (param_list
      (param
        (identifier)
        (pointer_type
          (named_type
            (identifier))))
      (param
        (identifier)
        (named_type
          (identifier))))
    (effect_list
      (identifier))
    (block
      (if_stmt
        (identifier)
        (block
          (expr_stmt
            (assignment_stmt
              (deref_target
                (identifier))
              (integer_literal)))
          (expr_stmt
            (assignment_stmt
              (deref_target
                (identifier))
              (integer_literal))))))))

================================================================
a multiplication continued on the next line is still a continuation
================================================================

fn cont(a: Int, b: Int) -> Int
    let x = a
        * b
    x

----

(source_file
  (fn_decl
    (identifier)
    (param_list
      (param
        (identifier)
        (named_type
          (identifier)))
      (param
        (identifier)
        (named_type
          (identifier))))
    (named_type
      (identifier))
    (block
      (let_stmt
        (identifier)
        (binary_expr
          (identifier)
          (identifier)))
      (expr_stmt
        (identifier)))))
